filter-date: fixed classes to make the filter work

--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -6,16 +6,12 @@
         <ul class="itemBoxTable__bodyRow">
           <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
-
               <input type="search" class="JS_multiSelector__filterInput" placeholder="search through items">
-
             </div>
           </li>
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--action" style="flex-grow: 0;" data-flex="0">
             <div class="itemBoxTable__bodyCellInner">
-
               <i class="itemBoxTable__action">ञ</i>
-
             </div>
           </li>
         </ul>
@@ -44,7 +40,6 @@
             </div>
           </li>
         </ul>
-
         <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildren">
           <div class="itemBoxTable">
             <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
@@ -71,17 +66,13 @@
                     <ul class="itemBoxTable__bodyRow">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
-
-
-                            <div class="pmx-selector pmx-selector--readonly">
-                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-                                <div class="pmx-selector__block ">
-                                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
-                                </div>
+                          <div class="pmx-selector pmx-selector--readonly">
+                            <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                              <div class="pmx-selector__block ">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">next 2 weeks (12/03/18-25/03/18)</div>
                               </div>
                             </div>
-
-
+                          </div>
                         </div>
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -93,15 +84,13 @@
                     <ul class="itemBoxTable__bodyRow">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
-
-                            <div class="pmx-selector pmx-selector--readonly">
-                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-                                <div class="pmx-selector__block ">
-                                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">19/03/18-20/03/18</div>
-                                </div>
+                          <div class="pmx-selector pmx-selector--readonly">
+                            <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                              <div class="pmx-selector__block ">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">19/03/18-20/03/18</div>
                               </div>
                             </div>
-
+                          </div>
                         </div>
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -137,17 +126,13 @@
                     <ul class="itemBoxTable__bodyRow">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
-
-
-                            <div class="pmx-selector pmx-selector--readonly">
-                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-                                <div class="pmx-selector__block ">
-                                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">today</div>
-                                </div>
+                          <div class="pmx-selector pmx-selector--readonly">
+                            <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                              <div class="pmx-selector__block ">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">today</div>
                               </div>
                             </div>
-
-
+                          </div>
                         </div>
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -159,17 +144,13 @@
                     <ul class="itemBoxTable__bodyRow">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
-
-
-                              <div class="pmx-selector pmx-selector--readonly">
-                                <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-                                  <div class="pmx-selector__block ">
-                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field">18/03/18</div>
-                                  </div>
-                                </div>
+                          <div class="pmx-selector pmx-selector--readonly">
+                            <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                              <div class="pmx-selector__block ">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">18/03/18</div>
                               </div>
-
-
+                            </div>
+                          </div>
                         </div>
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -217,18 +198,16 @@
               <div class="itemBox itemBox--children">
                 <div class="itemBoxTable">
                   <div class="itemBoxBody">
-                    <ul class="itemBoxTable__bodyRow">
+                    <ul class="itemBoxTable__bodyRow JS_filterableCell">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
-
-                            <div class="pmx-selector">
-                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-                                <div class="pmx-selector__block ">
-                                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">today</div>
-                                </div>
+                          <div class="pmx-selector">
+                            <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                              <div class="pmx-selector__block ">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">today</div>
                               </div>
                             </div>
-
+                          </div>
                         </div>
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -259,19 +238,16 @@
               <div class="itemBox itemBox--children">
                 <div class="itemBoxTable">
                   <div class="itemBoxBody">
-                    <ul class="itemBoxTable__bodyRow">
+                    <ul class="itemBoxTable__bodyRow JS_filterableCell">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
-
-
-                            <div class="pmx-selector">
-                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-                                <div class="pmx-selector__block ">
-                                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">18/03/18</div>
-                                </div>
+                          <div class="pmx-selector">
+                            <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                              <div class="pmx-selector__block ">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">18/03/18</div>
                               </div>
                             </div>
-
+                          </div>
                         </div>
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -281,7 +257,6 @@
                       </li>
                     </ul>
                     {% include blocks/popup/ms-create-new.html %}
-
                   </div>
                 </div>
               </div>
@@ -302,19 +277,16 @@
               <div class="itemBox itemBox--children">
                 <div class="itemBoxTable">
                   <div class="itemBoxBody">
-                    <ul class="itemBoxTable__bodyRow">
+                    <ul class="itemBoxTable__bodyRow JS_filterableCell">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
-
-
-                            <div class="pmx-selector">
-                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-                                <div class="pmx-selector__block ">
-                                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">19/03/18-20/03/18</div>
-                                </div>
+                          <div class="pmx-selector">
+                            <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                              <div class="pmx-selector__block ">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">19/03/18-20/03/18</div>
                               </div>
                             </div>
-
+                          </div>
                         </div>
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -345,18 +317,16 @@
               <div class="itemBox itemBox--children">
                 <div class="itemBoxTable">
                   <div class="itemBoxBody">
-                    <ul class="itemBoxTable__bodyRow">
+                    <ul class="itemBoxTable__bodyRow JS_filterableCell">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
-
-                            <div class="pmx-selector">
-                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
-                                <div class="pmx-selector__block ">
-                                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
-                                </div>
+                          <div class="pmx-selector">
+                            <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                              <div class="pmx-selector__block ">
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">next 2 weeks (12/03/18-25/03/18)</div>
                               </div>
                             </div>
-
+                          </div>
                         </div>
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -366,7 +336,6 @@
                       </li>
                     </ul>
                     {% include blocks/popup/ms-create-new.html %}
-
                   </div>
                 </div>
               </div>
